<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>TOSP-KitPvP</groupId>
  <artifactId>TOSP-KitPvP</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>18</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
  <repositories>
    <!-- This adds the Spigot Maven repository to the build -->
	    <repository>
	        <id>spigot-repo</id>
	        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
	    </repository>
	    
	</repositories>

	<dependencies>
	    <!--This adds the Spigot API artifact to the build -->
	    <dependency>
	           <groupId>org.spigotmc</groupId>
	           <artifactId>spigot-api</artifactId>
	           <version>1.19.3-R0.1-SNAPSHOT</version>
	           <scope>provided</scope>
	    </dependency>
	    
	    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>3.12.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.11.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
		<dependency>
		    <groupId>commons-codec</groupId>
		    <artifactId>commons-codec</artifactId>
		    <version>1.15</version>
		</dependency>


	</dependencies>
</project>